Fixing header spacing again

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     font-size: 60px;
     border-style: solid;
     border-width: 0 0 5px 0;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 
 }
 
